# reflection

./: .gitignore  Cargo.toml
src/: aabb.rs  camera.rs  intersection.rs  lib.rs  main.rs  pdf.rs  randomness.rs  ray.rs  texture.rs
src/integrator/: mod.rs  normal_integrator.rs  path_integrator.rs
src/scene/: bvh.rs  mod.rs  primitive.rs
src/world/: albedo.rs  material.rs  mod.rs  shape.rs
