[package]
name = "reflection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
wide = []


[dependencies]
nalgebra = "0.30.1"
generational-arena = "0.2.8"
rayon = "1.5.1"
parking_lot = "0.12.0"
image = "0.24.0"
rand = "0.8.4"
rand_distr = "0.4.3"
num-traits = "0.2.14"
